Creato repo e inserito file con struttura già tutto collegato

--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- link del font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+
+  <!-- link secondo font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;1,300&family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
+
   <link rel="icon" href="./favicon.ico">
-  <title>Vite App Template Repository</title>
+
+  <title>Marée - Illustration and Design</title>
 </head>
 
 <body>
